# hp203b-rs

./: .gitignore  Cargo.toml  README.md
self-tests/: Cargo.toml  README.md  memory.x
self-tests/.cargo/: config.toml
self-tests/src/: main.rs
self-tests/tests/: basic-test.rs  basic.rs  test.rs
src/: flags.rs  interrupts.rs  lib.rs  registers.rs
tests/: basic-mocks.rs  basic.rs
