[package]
name = "hp203b"
version = "0.2.0"
edition = "2021"
description = "`embedded-hal`-based driver crate for the HOPERF HP203B altimeter/barometer"
repository = "https://github.com/Laura7089/hp203b-rs"
license = "MPL-2.0"
keywords = ["embedded-hal", "no-std", "hp203b", "altimeter", "thermometer"]
categories = ["aerospace", "embedded", "no-std", "science::robotics"]

[dependencies]
bitflags = "1.3.2"
bytemuck = "1.12.1"
embedded-hal = "=1.0.0-alpha.8"
nb = "1.0.0"

[dev-dependencies]
test-case = "2.2.1"
embedded-hal-mock = { git = "https://github.com/dbrgn/embedded-hal-mock", branch = "1-alpha" }
