[package]
name = "hp203b"
version = "0.3.0"
edition = "2021"
description = "`embedded-hal`-based driver crate for the HOPERF HP203B altimeter/barometer"
repository = "https://github.com/Laura7089/hp203b-rs"
license = "MPL-2.0"
keywords = ["embedded-hal", "no-std", "hp203b", "altimeter", "thermometer"]
categories = ["aerospace", "embedded", "no-std", "science::robotics"]

[dependencies]
bitflags = "1.3.2"
bytemuck = "1.12.1"
defmt = { version = "0.3.2", optional = true }
embedded-hal = "=1.0.0-alpha.10"
fugit = "0.3.6"
nb = "1.0.0"
paste = "1.0.12"

[dev-dependencies]
test-case = "2.2.1"
embedded-hal-mock = { git = "https://github.com/dbrgn/embedded-hal-mock", rev = "33b0458f632a67ef9be88c92c658be9f49566e37" }
once_cell = "1.14.0"
rand = "0.8.5"

[features]
default = []
defmt = ["dep:defmt", "fugit/defmt"]

[[test]]
name = "basic-mocks"
